--- a/index.html
+++ b/index.html
@@ -19,19 +19,24 @@
 
       <div id="content">
         <section id="home">
-          <img id="profile_pic" src="images/Emily.JPG" alt="Profile photo">
-          <div id="introText">
-            <img id="name" src="images/myName.png" alt="Profile photo">
-            <p>
-              Hi! I'm a B.S. candidate for Computer Science in the AI track at Stanford University. I was also a Course Assistant (TA) for
-              <a href="https://explorecourses.stanford.edu/search?view=catalog&filter-coursestatus-Active=on&q=ENGR%2040M:%20An%20Intro%20to%20Making:%20What%20is%20EE&academicYear=20222023"
-                 target="_blank">ENGR 40M</a>,
-              the largest Electrical Engineering course at Stanford. Outside of engineering, I dance with
-              <a href="https://cardinalballet.stanford.edu/"
-                 target="_blank">Cardinal Ballet Company</a>,
-              and am the company's Financial Officer.
-            </p>
-          </div>
+          <section id="homeContent">
+            <img id="profile_pic" src="images/Emily.JPG" alt="Profile photo">
+            <div id="introText">
+              <img id="name" src="images/myName.png" alt="Profile photo">
+              <p>
+                Hi! I'm an M.S. (2025) and B.S. (2024) candidate for Computer Science with a concentration in AI at Stanford University.
+                I currently work with the <a href="https://esrg.stanford.edu"
+                   target="_blank">Stanford Empirical Security Research Group</a>.
+                Previously, I was a Course Assistant (TA) for
+                <a href="https://explorecourses.stanford.edu/search?view=catalog&filter-coursestatus-Active=on&q=ENGR%2040M:%20An%20Intro%20to%20Making:%20What%20is%20EE&academicYear=20222023"
+                   target="_blank">ENGR 40M</a>,
+                the largest Electrical Engineering course at Stanford. Outside of engineering, I dance with
+                <a href="https://cardinalballet.stanford.edu/"
+                   target="_blank">Cardinal Ballet Company</a>,
+                and am the company's Financial Officer.
+              </p>
+            </div>
+          </section>
         </section>
 
         <div class="space-before-line"></div>
@@ -42,7 +47,11 @@
             <h1>Work Experience</h1>
             <div class="resumeItem">
               <div class="resumeItemText">
-                <p>NLP Research Assistant with Stanford Empirical Security Research Group</p>
+                <p>NLP Research Assistant with <a href="https://esrg.stanford.edu"
+                   target="_blank">Stanford Empirical Security Research Group</a></p>
+                <ul>
+                  <li>Research the spread of narratives between unreliable and reliable news websites</li>
+                </ul>
               </div>
 
               <div class="date">
@@ -209,7 +218,25 @@
             <div class="resumeItem">
               <div class="resumeItemText">
                 <p>
-                  Solo variation from Cardinal Ballet Company's Sleeping Beauty production
+                  Grand Pas de Deux from Cardinal Ballet Company's Nutcracker
+                </p>
+                <iframe width="600" height="400"
+                  src="https://www.youtube.com/embed/cVYwSzKpkZI?start=3510&end=3878"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write;
+                    encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
+                </iframe>
+              </div>
+              <div class="date">
+                <p>Dec 2023</p>
+              </div>
+              
+            </div>
+            <div class="resumeItem">
+              <div class="resumeItemText">
+                <p>
+                  Solo variation from Cardinal Ballet Company's Sleeping Beauty
                 </p>
                 <iframe width="600" height="400"
                   src="https://www.youtube.com/embed/z0Gkj7FJR9g"
@@ -219,7 +246,6 @@
                   allowfullscreen>
                 </iframe>
               </div>
-
               <div class="date">
                 <p>May 2022</p>
               </div>
