Update contact information

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <section id="contact">
         <div id="contactContents">
           <h1>Contact</h1>
-          <p>To contact me, go to <a href="contact.html">this page</a>.</p>
+          <p>emilyokb {at} stanford {dot} edu</p>
         </div>
       </section>
 
