--- a/index.html
+++ b/index.html
@@ -221,33 +221,31 @@
                   Grand Pas de Deux from Cardinal Ballet Company's Nutcracker
                 </p>
                 <iframe width="600" height="400"
-                  src="https://www.youtube.com/embed/cVYwSzKpkZI?start=3510&end=3878"
+                  src="https://www.youtube.com/embed/cVYwSzKpkZI?si=zFa07HknoL_Ijnsv&amp;start=3510"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write;
-                    encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen>
-                </iframe>
+                    encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
               </div>
               <div class="date">
                 <p>Dec 2023</p>
               </div>
-              
+
             </div>
             <div class="resumeItem">
               <div class="resumeItemText">
                 <p>
-                  Solo variation from Cardinal Ballet Company's Sleeping Beauty
+                  Solo variation from Cardinal Ballet Company's Swan Lake
                 </p>
                 <iframe width="600" height="400"
-                  src="https://www.youtube.com/embed/z0Gkj7FJR9g"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write;
-                    encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen>
-                </iframe>
+                src="https://www.youtube.com/embed/xf7cTIcZCZI?si=yYn_v3_CSe0Km3QD&amp;start=598"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write;
+                  encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
               </div>
               <div class="date">
-                <p>May 2022</p>
+                <p>May 2023</p>
               </div>
             </div>
           </section>
