--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                   Grand Pas de Deux from Cardinal Ballet Company's Nutcracker
                 </p>
                 <iframe width="600" height="400"
-                  src="https://www.youtube.com/embed/cVYwSzKpkZI?si=zFa07HknoL_Ijnsv&amp;start=3510"
+                  src="https://www.youtube.com/embed/k37c3X-RDlM?si=LPiQN85PwBuxjw34"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write;
-                    encrypted-media; gyroscope; picture-in-picture; web-share"
+                  encrypted-media; gyroscope; picture-in-picture; web-share"
                   allowfullscreen></iframe>
               </div>
               <div class="date">
@@ -235,17 +235,17 @@
             <div class="resumeItem">
               <div class="resumeItemText">
                 <p>
-                  Solo variation from Cardinal Ballet Company's Swan Lake
+                  Solo variation from Cardinal Ballet Company's Sleeping Beauty
                 </p>
                 <iframe width="600" height="400"
-                src="https://www.youtube.com/embed/xf7cTIcZCZI?si=yYn_v3_CSe0Km3QD&amp;start=598"
+                src="https://www.youtube.com/embed/z0Gkj7FJR9g?si=7xkPw0WPb19LSaJW"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write;
-                  encrypted-media; gyroscope; picture-in-picture; web-share"
+                encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
               </div>
               <div class="date">
-                <p>May 2023</p>
+                <p>May 2022</p>
               </div>
             </div>
           </section>
