Update "just for fun" section

--- a/index.html
+++ b/index.html
@@ -235,17 +235,17 @@
             <div class="resumeItem">
               <div class="resumeItemText">
                 <p>
-                  Solo variation from Cardinal Ballet Company's Sleeping Beauty
+                  Pas de Trois Variation from Cardinal Ballet Company's Swan Lake
                 </p>
-                <iframe width="600" height="400"
-                src="https://www.youtube.com/embed/z0Gkj7FJR9g?si=7xkPw0WPb19LSaJW"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write;
-                encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+                <iframe width="600" height="400" 
+                  src="https://www.youtube.com/embed/mSMDN1SaGWo?si=KrDkSfeBjBlSSHza" 
+                  title="YouTube video player" frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; 
+                  encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen></iframe>
               </div>
               <div class="date">
-                <p>May 2022</p>
+                <p>May 2023</p>
               </div>
             </div>
           </section>
