Update about section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <div id="introText">
               <img id="name" src="images/myName.png" alt="Profile photo">
               <p>
-                Hi! I'm an M.S. (2025) and B.S. (2024) candidate for Computer Science with a concentration in AI at Stanford University.
-                I currently work with the <a href="https://esrg.stanford.edu"
-                   target="_blank">Stanford Empirical Security Research Group</a>.
+                Hi! I am an M.S. candidate in Computer Science with a concentration in AI (2025) at Stanford University, where I also earned a B.S. in CS (2024).
+                I have been a research assistant with the <a href="https://esrg.stanford.edu"
+                   target="_blank">Stanford Empirical Security Research Group</a> since 2023. 
+                My work focuses on using NLP to analyze online misinformation by examining the public’s sentiment towards different news narratives and the effectiveness of fact-checking sources in mitigating the spread of fake news.
                 Previously, I was a Course Assistant (TA) for
                 <a href="https://explorecourses.stanford.edu/search?view=catalog&filter-coursestatus-Active=on&q=ENGR%2040M:%20An%20Intro%20to%20Making:%20What%20is%20EE&academicYear=20222023"
                    target="_blank">ENGR 40M</a>,
