--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
             <h1>Work Experience</h1>
             <div class="resumeItem">
               <div class="resumeItemText">
+                <p>AI Research Intern at Newsbreak</p>
+                <ul>
+                  <li>NLP team</li>
+                </ul>
+              </div>
+
+              <div class="date">
+                <p>Aug 2023 – present</p>
+              </div>
+            </div>
+            
+            <div class="resumeItem">
+              <div class="resumeItemText">
                 <p>NLP Research Assistant with <a href="https://esrg.stanford.edu"
                    target="_blank">Stanford Empirical Security Research Group</a></p>
                 <ul>
