--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
                     Personal C++ Project completed during Winter Break of 2020
                     <ul>
                       <li>An advanced version of tic-tac-toe (rules described in video below)</li>
-                      <li>Incorporates 2 to 4 players, with any number of them being AI players</li>
-                      <li>Each AI players has a different "personality" – vary in offensiveness/defensiveness</li>
+                      <li>Incorporates 2 to 4 players, with any number of them being computer agents with different "personalities: (vary in offensiveness/defensiveness)</li>
                       <li>
                         Video Demo:
                       </li>
