--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </div>
 
               <div class="date">
-                <p>Aug 2023 – present</p>
+                <p>Jun 2025 – present</p>
               </div>
             </div>
             
@@ -69,7 +69,7 @@
               </div>
 
               <div class="date">
-                <p>Aug 2023 – present</p>
+                <p>Aug 2023 – Jun 2025</p>
               </div>
             </div>
 
@@ -170,7 +170,7 @@
                     Personal C++ Project completed during Winter Break of 2020
                     <ul>
                       <li>An advanced version of tic-tac-toe (rules described in video below)</li>
-                      <li>Incorporates 2 to 4 players, with any number of them being computer agents with different "personalities: (vary in offensiveness/defensiveness)</li>
+                      <li>Incorporates 2 to 4 players, with any number of them being computer agents with different "personalities" (vary in offensiveness/defensiveness)</li>
                       <li>
                         Video Demo:
                       </li>
@@ -205,7 +205,7 @@
               </div>
 
               <div class="date">
-                <p>Aug 2022 – present</p>
+                <p>Aug 2022 – Jun 2025</p>
               </div>
             </div>
 
