--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
             <div class="resumeItem">
               <div class="resumeItemText">
                 <p>
-                  Pas de Trois Variation from Cardinal Ballet Company's Swan Lake
+                  3rd Odalisque Variation from Cardinal Ballet Company's Le Corsaire
                 </p>
-                <iframe width="600" height="400" 
-                  src="https://www.youtube.com/embed/mSMDN1SaGWo?si=KrDkSfeBjBlSSHza" 
+                <iframe width="560" height="315" 
+                  src="https://www.youtube.com/embed/vO5S05y-uFM?si=Vb-boiZadaq2NfIA" 
                   title="YouTube video player" frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; 
                   encrypted-media; gyroscope; picture-in-picture; web-share" 
-                  allowfullscreen></iframe>
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
               <div class="date">
                 <p>May 2023</p>
