--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
             <div id="introText">
               <img id="name" src="images/myName.png" alt="Profile photo">
               <p>
-                Hi! I am an M.S. candidate in Computer Science with a concentration in AI (2025) at Stanford University, where I also earned a B.S. in CS (2024).
-                I have been a research assistant with the <a href="https://esrg.stanford.edu"
-                   target="_blank">Stanford Empirical Security Research Group</a> since 2023. 
-                My work focuses on using NLP to analyze online misinformation by examining the public’s sentiment towards different news narratives and the effectiveness of fact-checking sources in mitigating the spread of fake news.
+                Hi! My name is Emily, and I am currently an AI Research Intern with the NLP team at NewsBreak.
+                I recently graduated with an M.S. (2025) and a B.S. (2024) in Computer Science with a concentration in AI from Stanford University.
+                At Stanford, I was a research assistant with the <a href="https://esrg.stanford.edu"
+                   target="_blank">Stanford Empirical Security Research Group</a>, where I focused on using NLP to analyze online misinformation by examining the public’s sentiment towards different news narratives and the effectiveness of fact-checking sources in mitigating the spread of fake news.
                 Previously, I was a Course Assistant (TA) for
                 <a href="https://explorecourses.stanford.edu/search?view=catalog&filter-coursestatus-Active=on&q=ENGR%2040M:%20An%20Intro%20to%20Making:%20What%20is%20EE&academicYear=20222023"
                    target="_blank">ENGR 40M</a>,
-                the largest Electrical Engineering course at Stanford. Outside of engineering, I dance with
+                the largest Electrical Engineering course at Stanford. Outside of engineering, I danced with
                 <a href="https://cardinalballet.stanford.edu/"
                    target="_blank">Cardinal Ballet Company</a>,
-                and am the company's Financial Officer.
+                and was the company's Financial Officer for three years.
               </p>
             </div>
           </section>
@@ -48,7 +48,7 @@
             <h1>Work Experience</h1>
             <div class="resumeItem">
               <div class="resumeItemText">
-                <p>AI Research Intern at Newsbreak</p>
+                <p>AI Research Intern at NewsBreak</p>
                 <ul>
                   <li>NLP team</li>
                 </ul>
