Fix projects in index.html

--- a/index.html
+++ b/index.html
@@ -118,21 +118,11 @@
             <h1>Projects</h1>
             <div id="coursily" class="resumeItem">
               <div class="resumeItemText">
-                <p>Coursily iOS App</p>
+                <p>Leveraging Graph Neural Networks for Analyzing User-Bot Engagement on Twitter (Stanford CS 224W Project)</p>
                 <ul>
-                  <li>
-                    Leveraging Graph Neural Networks for Analyzing User-Bot Engagement on Twitter (CS 224W Project)
-                    <ul>
-                      <li>Exploration of Heterogeneous Graph Attention Network (HAN), GCN, and GAN to perform node classification between humans and bots on Twitter, analyze behavior of bots among human users, and identify bot farms</li>
-                      <li>Achieve accuracy of 0.74 and F1 score of 0.68 using HAN w/ BERT embeddings and focal loss</li>
-                      <li>Significant integration of Facebook SDK – includes login through OAuth,
-                        dynamic fetching/caching of Facebook Group posts</li>
-                      <li>Uses a probability-based text similarity algorithm to recommend viewed posts
-                        to users based on posts that have been searched before</li>
-                      <li>Store data, such as viewed posts and course information, on Parse</li>
-                      <li><a href="https://medium.com/stanford-cs224w/leveraging-graph-neural-networks-for-analyzing-user-bot-engagement-on-twitter-2d588157e354" target="_blank">Link to Medium article</a></li>
-                    </ul>
-                  </li>
+                  <li>Exploration of Heterogeneous Graph Attention Network (HAN), GCN, and GAN to perform node classification between humans and bots on Twitter, analyze behavior of bots among human users, and identify bot farms</li>
+                  <li>Achieve accuracy of 0.74 and F1 score of 0.68 using HAN w/ BERT embeddings and focal loss</li>
+                  <li><a href="https://medium.com/stanford-cs224w/leveraging-graph-neural-networks-for-analyzing-user-bot-engagement-on-twitter-2d588157e354" target="_blank">Link to Medium article</a></li>
                 </ul>
               </div>
 
