--- a/index.html
+++ b/index.html
@@ -25,16 +25,9 @@
               <img id="name" src="images/myName.png" alt="Profile photo">
               <p>
                 Hi! My name is Emily, and I am currently an AI Research Intern with the NLP team at NewsBreak.
-                I recently graduated with an M.S. (2025) and a B.S. (2024) in Computer Science with a concentration in AI from Stanford University.
+                I recently graduated from Stanford University with an M.S. (2025) and a B.S. (2024) in Computer Science with a concentration in AI.
                 At Stanford, I was a research assistant with the <a href="https://esrg.stanford.edu"
                    target="_blank">Stanford Empirical Security Research Group</a>, where I focused on using NLP to analyze online misinformation by examining the public’s sentiment towards different news narratives and the effectiveness of fact-checking sources in mitigating the spread of fake news.
-                Previously, I was a Course Assistant (TA) for
-                <a href="https://explorecourses.stanford.edu/search?view=catalog&filter-coursestatus-Active=on&q=ENGR%2040M:%20An%20Intro%20to%20Making:%20What%20is%20EE&academicYear=20222023"
-                   target="_blank">ENGR 40M</a>,
-                the largest Electrical Engineering course at Stanford. Outside of engineering, I danced with
-                <a href="https://cardinalballet.stanford.edu/"
-                   target="_blank">Cardinal Ballet Company</a>,
-                and was the company's Financial Officer for three years.
               </p>
             </div>
           </section>
