--- a/index.html
+++ b/index.html
@@ -159,6 +159,24 @@
             </div>
           </section>
 
+          <section id="publications">
+            <h1>Publications</h1>
+            <div class="resumeItem">
+              <div class="resumeItemText">
+                <p>
+                  Hans W. A. Hanley, Emily Ito Okabe, and Zakir Durumeric. "Tall and True Tales: Thoroughly Tracking the Takes and Trajectories of News Narratives from Trustworthy and Worrisome Websites"
+                </p>
+                <ul>
+                  <li>Accepted for USENIX Security ‘25</li>
+                </ul>
+              </div>
+
+              <div class="date">
+                <p>Aug 2025</p>
+              </div>
+            </div>
+          </section>
+
           <section id="leadership">
             <h1>Leadership Experience</h1>
             <div class="resumeItem">
