--- a/index.html
+++ b/index.html
@@ -164,11 +164,10 @@
             <div class="resumeItem">
               <div class="resumeItemText">
                 <p>
-                  Hans W. A. Hanley, Emily Ito Okabe, and Zakir Durumeric. "Tall and True Tales: Thoroughly Tracking the Takes and Trajectories of News Narratives from Trustworthy and Worrisome Websites"
+                  Tall and True Tales: Thoroughly Tracking the Takes and Trajectories of News Narratives from Trustworthy and Worrisome Websites
                 </p>
-                <ul>
-                  <li>Accepted for USENIX Security ‘25</li>
-                </ul>
+                Hans W. A. Hanley, <b>Emily Ito Okabe</b>, and Zakir Durumeric
+                <i>USENIX Security ‘25</i>
               </div>
 
               <div class="date">
