--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a class="active" href="#home">About</a>
         <a href="#workExperience">Work Experience</a>
         <a href="#projects">Projects</a>
+        <a href="#publications">Publications</a>
         <a href="#leadership">Leadership</a>
         <a href="#forFun">Just for Fun</a>
         <a href="#contact">Contact</a>
@@ -166,7 +167,7 @@
                 <p>
                   Tall and True Tales: Thoroughly Tracking the Takes and Trajectories of News Narratives from Trustworthy and Worrisome Websites
                 </p>
-                Hans W. A. Hanley, <b>Emily Ito Okabe</b>, and Zakir Durumeric
+                Hans W. A. Hanley, <b>Emily Ito Okabe</b>, and Zakir Durumeric<br>
                 <i>USENIX Security ‘25</i>
               </div>
 
